2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add option to control building of unified source
	tree.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Break out the generic
	Linux setup into its own file, specify target in environment variable.
	* dejagnu/baseboards/arc-linux-generic.exp: Generic set up shared
	between all Linux boards.
	* dejagnu/baseboards/arc-linux-nsim.exp: Created.
	* run-tests.sh (--target): New option to specify target address.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh (--enable-multilib, --disable-multilib): Add
	argument handling accidentally deleted.

2013-01-31  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Add options to control parallelism
	* all-version.sh: Remove specification of PARALLEL

2013-01-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (save_res): Append errors to log, not overwrite.
	* dejagnu/baseboards/arc-linux-aa4.exp: Improve commenting, and
	general password field.
	* run-elf32-tests.sh: Add target_dir.
	* run-tests.sh: Tidy up error messages. Add better commenting
	* run-uclibc-tests.sh: Make target_dir generic, tidy up layout

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --elf32/--no-elf32 and --linux/--no-linux
	options. Negate tests where empty "then" clause.
	* build-uclibc.sh: Remove build of simulator.

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Use a hostname rather than
	number.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* arc-init.sh (save_res): use "tr" instead of "dos2unix" to replace
	Windows' line endings with Linux' line endings.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh. run-uclibc-tests.sh: Handle tests for big endian properly.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>
