@@ -20,11 +20,10 @@
 # You should have received a copy of the GNU General Public License along
 # with this program.  If not, see <http://www.gnu.org/licenses/>.
        
-#		   ARC Linux DejaGnu Board Support for nSim
-#		   ========================================
+#		ARC Linux DejaGnu Board Support for ARCAngel 4
+#		==============================================
 
-# This is a variant of the Linux board set up for use with nSim. It requires
-# an nSim wrapper capable of exporting a virtual Ethernet port via TUN/TAP.
+# This is a variant of the Linux board set up for use with AA.
 
 # Before using, make the following changes
 
